add wicked charts functionality

--- a/src/main/java/com/ubi/uquasar/menu.html
+++ b/src/main/java/com/ubi/uquasar/menu.html
@@ -18,6 +18,7 @@
                     <a href = "/com/ubi/uquasar/JiraserverInfo.html">Bridge Config Info</a><br/>
                     <a href = "/jira/integration/ProjectsPage.html">Bridge Projects</a><br/>
                     <a href = "/jira/integration/IssuesPage.html">Bridge Issues</a><br/>
+                    <a href = "/jira/integration/VisualizeIssuesPage.html">Visualize Issues per Project</a><br/>
                     <!--<a href = "/jira/integration/ProjectsGridViewPage.html">ProjectsGridViewPage</a><br/>
                     <a href = "/jira/integration/IssuesGridViewPage.html">IssuesGridViewPage</a><br/>
                     <a href = "/com/ubi/uquasar/HomePage.html">Homepage</a><br/>
