--- a/src/main/java/jira/integration/IssuesPage.html
+++ b/src/main/java/jira/integration/IssuesPage.html
@@ -15,42 +15,42 @@
 <div style="float: left;margin-left: 40px;">
 
     <div wicket:id="wmc">
-        <!-- Dropdown Project Selector  -->
+        <!-- Dropdown Project Selector
         <p>
             <label>Select your Jira project </label>
             <br />
             <select wicket:id="projects"></select>
         </p>
 
+         -->
 
-
-        <!-- Issues by Project Gridview -->
+        <!-- Issues by Project Gridview  -->
         <span wicket:id="navigator">[dataview navigator]</span>
         <table cellspacing="0" class="dataview">
             <tr>
                 <th>Issue Key</th>
-                <th>Summary</th>
+                <th width="300" >Self</th>
+                <!--th>Summary</th>
                 <th>Type</th>
                 <th>Status</th>
                 <th>Description</th>
                 <th>Environment</th>
-                <th>Asignee</th>
-               <!-- <th>Created</th>
-                <th>Due Date</th>-->
+                <th>Asignee</th-->
+
 
             </tr>
             <tr wicket:id="simple">
                 <td><span wicket:id="key">[key]</span></td>
-                <td><span wicket:id="summary">[summary]</span></td>
+                <td height="25"><span wicket:id="self">[self]</span></td>
+                <!--td><span wicket:id="summary">[summary]</span></td>
                 <td><span wicket:id="type">[type]</span></td>
                 <td><span wicket:id="status">[status]</span></td>
                 <td><span wicket:id="description">[description]</span></td>
                 <td><span wicket:id="environment">[environment]</span></td>
-                <td><span wicket:id="asignee">[asignee]</span></td>
-                <!--<td><span wicket:id="created">[created]</span></td>
-                <td><span wicket:id="duedate">[duedate]</span></td>-->
+                <td><span wicket:id="asignee">[asignee]</span></td-->
             </tr>
         </table>
+
     </div>
 </div>
 </body>
