--- a/src/main/java/jira/integration/ProjectsPage.html
+++ b/src/main/java/jira/integration/ProjectsPage.html
@@ -20,17 +20,21 @@
         <table cellspacing="0" class="dataview">
             <tr>
                 <th>Project Key</th>
-                <th>Description</th>
+                <th>Name</th>
+                <th width="300">ProjectUrl</th>
+                <!--th>Description</th>
                 <th>ProjectUrl</th>
                 <th>Url</th>
-                <th>Lead</th>
+                <th>Lead</th-->
             </tr>
             <tr wicket:id="simple">
                 <td><span wicket:id="key">[key]</span></td>
-                <td><span wicket:id="description">[description]</span></td>
+                <td><span wicket:id="name">[name]</span></td>
+                <td height="25"><span wicket:id="self">[self]</span></td>
+                <!--td><span wicket:id="description">[description]</span></td>
                 <td><span wicket:id="projectUrl">[projectUrl]</span></td>
                 <td><span wicket:id="url">[url]</span></td>
-                <td><span wicket:id="lead">[lead]</span></td>
+                <td><span wicket:id="lead">[lead]</span></td-->
             </tr>
         </table>
     </div>
