--- a/src/main/java/jira/integration/VisualizeIssuesPage.html
+++ b/src/main/java/jira/integration/VisualizeIssuesPage.html
@@ -7,25 +7,42 @@
 
 <span wicket:id = "menu">
         <div style = "width:100%">
-            <h1>Bridge Issues</h1>
-            <p>In the following gridview JIRA Issues per Project are presented.</p>
+            <h1>Jira Statistics</h1>
+            <p>The following charts visualize the type of issues per JIRA project</p>
         </div>
     </span>
 
-<div style="float: left;margin-left: 40px;">
+<div style="float: left;">
 
     <div wicket:id="wmc">
-        <!-- Dropdown Project Selector  -->
+        <!-- Dropdown Project Selector
         <p>
             <label>Select your Jira project </label>
             <br />
             <select wicket:id="projects"></select>
         </p>
+         -->
 
-        <!--div wicket:id="lineChartPanel"></div-->
+        <!--div wicket:id="lineChartPanel"></div
         <div wicket:id="chart"/>
+        <div wicket:id="piechart"/>
+        <div wicket:id="stackedColumnChart"/>
+        <div wicket:id="areaSplineChart"/> -->
 
-        <!-- Issues by Project Gridview -->
+        <table cellspacing="0">
+            <tr>
+                <td><div wicket:id="chart"/></td>
+                <td><div wicket:id="piechart"/></td>
+            </tr>
+            <tr>
+                <td><div wicket:id="stackedColumnChart"/></td>
+                <td> <div wicket:id="areaSplineChart"/></td>
+            </tr>
+
+        </table>
+
+
+        <!-- Issues by Project Gridview
         <span wicket:id="navigator">[dataview navigator]</span>
         <table cellspacing="0" class="dataview">
             <tr>
@@ -36,8 +53,8 @@
                 <th>Description</th>
                 <th>Environment</th>
                 <th>Asignee</th>
-                <!-- <th>Created</th>
-               <th>Due Date</th>-->
+                < ! -- <th>Created</th>
+               <th>Due Date</th> - ->
 
             </tr>
             <tr wicket:id="simple">
@@ -48,10 +65,12 @@
                 <td><span wicket:id="description">[description]</span></td>
                 <td><span wicket:id="environment">[environment]</span></td>
                 <td><span wicket:id="asignee">[asignee]</span></td>
-                <!--<td><span wicket:id="created">[created]</span></td>
-                <td><span wicket:id="duedate">[duedate]</span></td>-->
+                < !- -<td><span wicket:id="created">[created]</span></td>
+                <td><span wicket:id="duedate">[duedate]</span></td> - ->
             </tr>
         </table>
+
+        -->
     </div>
 </div>
 </body>
